--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -3,7 +3,7 @@
     height: 40px;
     background-color: #333;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     padding: 0 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -14,6 +14,7 @@
   .userDetails {
     display: flex;
     align-items: center;
+    margin-right: 50px;
   }
   
   .avatar {
@@ -26,5 +27,15 @@
   .userName {
     color: white;
     font-size: 16px;
+  }
+
+  .backButton {
+    background: none;
+    border: none;
+    color: #c85d44;
+    font-size: 18px;
+    cursor: pointer;
+    margin-left: 50px;
+    text-decoration: none;
   }
   
